Регистрация первичного пользователя осуществляется! Система работает

--- a/TorgovoPosredFirma.csproj
+++ b/TorgovoPosredFirma.csproj
@@ -27,6 +27,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Compile Update="View\Forms\RegistrationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
