--- a/TorgovoPosredFirma.csproj
+++ b/TorgovoPosredFirma.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <Reference Include="Employees">
-      <HintPath>..\Employees\bin\Debug\net8.0\Employees.dll</HintPath>
+      <HintPath>..\Employees\bin\Debug\net8.0-windows\Employees.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SharedModels">
@@ -51,6 +51,10 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Model\Classes\" />
   </ItemGroup>
 
 </Project>
